gen/gen/PyParser.java
// Generated from grammar/PyParser.g4 by ANTLR 4.13.2
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PyParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, FROM=3, IMPORT=4, DEF=5, RETURN=6, IF=7, ELIF=8, ELSE=9, 
		WHILE=10, FOR=11, IN=12, IS=13, NOT=14, AND=15, OR=16, TRUE=17, FALSE=18, 
		NONE=19, BREAK=20, WITH=21, AS=22, OPEN=23, PLUS_EQ=24, MINUS_EQ=25, STAR_EQ=26, 
		SLASH_EQ=27, EQ=28, NEQ=29, LE=30, GE=31, ASSIGN=32, LT=33, GT=34, PLUS=35, 
		MINUS=36, STAR=37, SLASH=38, COLON=39, COMMA=40, DOT=41, AT=42, LPAREN=43, 
		RPAREN=44, LBRACK=45, RBRACK=46, LBRACE=47, RBRACE=48, NUMBER=49, STRING=50, 
		IDENT=51, NEWLINE=52, COMMENT=53, WS=54;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_importStatement = 2, RULE_appInit = 3, 
		RULE_routeDeclaration = 4, RULE_routeDecorator = 5, RULE_functionDeclaration = 6, 
		RULE_paramList = 7, RULE_functionBody = 8, RULE_stmtInFunction = 9, RULE_ifStatement = 10, 
		RULE_whileStatement = 11, RULE_forStatement = 12, RULE_block = 13, RULE_withOpenStatement = 14, 
		RULE_assignmentStatement = 15, RULE_assignOp = 16, RULE_expressionStatement = 17, 
		RULE_returnStatement = 18, RULE_globalAssignment = 19, RULE_expression = 20, 
		RULE_orExpr = 21, RULE_andExpr = 22, RULE_notExpr = 23, RULE_comparisonExpr = 24, 
		RULE_compOp = 25, RULE_additiveExpr = 26, RULE_multiplicativeExpr = 27, 
		RULE_unaryExpr = 28, RULE_postfixExpr = 29, RULE_trailer = 30, RULE_atom = 31, 
		RULE_callArguments = 32, RULE_callArgument = 33, RULE_dictItem = 34;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "importStatement", "appInit", "routeDeclaration", 
			"routeDecorator", "functionDeclaration", "paramList", "functionBody", 
			"stmtInFunction", "ifStatement", "whileStatement", "forStatement", "block", 
			"withOpenStatement", "assignmentStatement", "assignOp", "expressionStatement", 
			"returnStatement", "globalAssignment", "expression", "orExpr", "andExpr", 
			"notExpr", "comparisonExpr", "compOp", "additiveExpr", "multiplicativeExpr", 
			"unaryExpr", "postfixExpr", "trailer", "atom", "callArguments", "callArgument", 
			"dictItem"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'from'", "'import'", "'def'", "'return'", "'if'", 
			"'elif'", "'else'", "'while'", "'for'", "'in'", "'is'", "'not'", "'and'", 
			"'or'", "'True'", "'False'", "'None'", "'break'", "'with'", "'as'", "'open'", 
			"'+='", "'-='", "'*='", "'/='", "'=='", "'!='", "'<='", "'>='", "'='", 
			"'<'", "'>'", "'+'", "'-'", "'*'", "'/'", "':'", "','", "'.'", "'@'", 
			"'('", "')'", "'['", "']'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "FROM", "IMPORT", "DEF", "RETURN", "IF", "ELIF", 
			"ELSE", "WHILE", "FOR", "IN", "IS", "NOT", "AND", "OR", "TRUE", "FALSE", 
			"NONE", "BREAK", "WITH", "AS", "OPEN", "PLUS_EQ", "MINUS_EQ", "STAR_EQ", 
			"SLASH_EQ", "EQ", "NEQ", "LE", "GE", "ASSIGN", "LT", "GT", "PLUS", "MINUS", 
			"STAR", "SLASH", "COLON", "COMMA", "DOT", "AT", "LPAREN", "RPAREN", "LBRACK", 
			"RBRACK", "LBRACE", "RBRACE", "NUMBER", "STRING", "IDENT", "NEWLINE", 
			"COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PyParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PyParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PyParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(PyParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PyParser.NEWLINE, i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyParserVisitor ) return ((PyParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 6759797487567032L) != 0)) {
				{
				setState(72);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case FROM:
				case IMPORT:
				case DEF:
				case IF:
				case AT:
				case IDENT:
					{
					setState(70);
					statement();
					}
					break;
				case NEWLINE:
					{
					setState(71);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(77);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalAssignDeclContext extends StatementContext {
		public GlobalAssignmentContext globalAssignment() {
			return getRuleContext(GlobalAssignmentContext.class,0);
		}
		public GlobalAssignDeclContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).enterGlobalAssignDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).exitGlobalAssignDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyParserVisitor ) return ((PyParserVisitor<? extends T>)visitor).visitGlobalAssignDecl(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class GlobalIfDeclContext extends StatementContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public GlobalIfDeclContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).enterGlobalIfDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).exitGlobalIfDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyParserVisitor ) return ((PyParserVisitor<? extends T>)visitor).visitGlobalIfDecl(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ImportDeclContext extends StatementContext {
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public ImportDeclContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).enterImportDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).exitImportDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyParserVisitor ) return ((PyParserVisitor<? extends T>)visitor).visitImportDecl(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class RouteDeclContext extends StatementContext {
		public RouteDeclarationContext routeDeclaration() {
			return getRuleContext(RouteDeclarationContext.class,0);
		}
		public RouteDeclContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).enterRouteDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).exitRouteDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyParserVisitor ) return ((PyParserVisitor<? extends T>)visitor).visitRouteDecl(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AppInitDeclContext extends StatementContext {
		public AppInitContext appInit() {
			return getRuleContext(AppInitContext.class,0);
		}
		public AppInitDeclContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).enterAppInitDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).exitAppInitDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyParserVisitor ) return ((PyParserVisitor<? extends T>)visitor).visitAppInitDecl(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclContext extends StatementContext {
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public FunctionDeclContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).enterFunctionDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).exitFunctionDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyParserVisitor ) return ((PyParserVisitor<? extends T>)visitor).visitFunctionDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new ImportDeclContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(79);
				importStatement();
				}
				break;
			case 2:
				_localctx = new AppInitDeclContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				appInit();
				}
				break;
			case 3:
				_localctx = new RouteDeclContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(81);
				routeDeclaration();
				}
				break;
			case 4:
				_localctx = new FunctionDeclContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(82);
				functionDeclaration();
				}
				break;
			case 5:
				_localctx = new GlobalAssignDeclContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(83);
				globalAssignment();
				}
				break;
			case 6:
				_localctx = new GlobalIfDeclContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(84);
				ifStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
	 
		public ImportStatementContext() { }
		public void copyFrom(ImportStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FromImportContext extends ImportStatementContext {
		public TerminalNode FROM() { return getToken(PyParser.FROM, 0); }
		public List<TerminalNode> IDENT() { return getTokens(PyParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(PyParser.IDENT, i);
		}
		public TerminalNode IMPORT() { return getToken(PyParser.IMPORT, 0); }
		public TerminalNode NEWLINE() { return getToken(PyParser.NEWLINE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(PyParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PyParser.COMMA, i);
		}
		public FromImportContext(ImportStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).enterFromImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).exitFromImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyParserVisitor ) return ((PyParserVisitor<? extends T>)visitor).visitFromImport(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PlainImportContext extends ImportStatementContext {
		public TerminalNode IMPORT() { return getToken(PyParser.IMPORT, 0); }
		public TerminalNode IDENT() { return getToken(PyParser.IDENT, 0); }
		public TerminalNode NEWLINE() { return getToken(PyParser.NEWLINE, 0); }
		public PlainImportContext(ImportStatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).enterPlainImport(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).exitPlainImport(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyParserVisitor ) return ((PyParserVisitor<? extends T>)visitor).visitPlainImport(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importStatement);
		int _la;
		try {
			setState(102);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FROM:
				_localctx = new FromImportContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				match(FROM);
				setState(88);
				match(IDENT);
				setState(89);
				match(IMPORT);
				setState(90);
				match(IDENT);
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(91);
					match(COMMA);
					setState(92);
					match(IDENT);
					}
					}
					setState(97);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(98);
				match(NEWLINE);
				}
				break;
			case IMPORT:
				_localctx = new PlainImportContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				match(IMPORT);
				setState(100);
				match(IDENT);
				setState(101);
				match(NEWLINE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AppInitContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(PyParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(PyParser.IDENT, i);
		}
		public TerminalNode ASSIGN() { return getToken(PyParser.ASSIGN, 0); }
		public TerminalNode LPAREN() { return getToken(PyParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PyParser.RPAREN, 0); }
		public TerminalNode NEWLINE() { return getToken(PyParser.NEWLINE, 0); }
		public CallArgumentsContext callArguments() {
			return getRuleContext(CallArgumentsContext.class,0);
		}
		public AppInitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_appInit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).enterAppInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).exitAppInit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyParserVisitor ) return ((PyParserVisitor<? extends T>)visitor).visitAppInit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AppInitContext appInit() throws RecognitionException {
		AppInitContext _localctx = new AppInitContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_appInit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(IDENT);
			setState(105);
			match(ASSIGN);
			setState(106);
			match(IDENT);
			setState(107);
			match(LPAREN);
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 4125436347826176L) != 0)) {
				{
				setState(108);
				callArguments();
				}
			}

			setState(111);
			match(RPAREN);
			setState(112);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RouteDeclarationContext extends ParserRuleContext {
		public FunctionDeclarationContext functionDeclaration() {
			return getRuleContext(FunctionDeclarationContext.class,0);
		}
		public List<RouteDecoratorContext> routeDecorator() {
			return getRuleContexts(RouteDecoratorContext.class);
		}
		public RouteDecoratorContext routeDecorator(int i) {
			return getRuleContext(RouteDecoratorContext.class,i);
		}
		public RouteDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_routeDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).enterRouteDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).exitRouteDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyParserVisitor ) return ((PyParserVisitor<? extends T>)visitor).visitRouteDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RouteDeclarationContext routeDeclaration() throws RecognitionException {
		RouteDeclarationContext _localctx = new RouteDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_routeDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(114);
				routeDecorator();
				}
				}
				setState(117); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==AT );
			setState(119);
			functionDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RouteDecoratorContext extends ParserRuleContext {
		public TerminalNode AT() { return getToken(PyParser.AT, 0); }
		public List<TerminalNode> IDENT() { return getTokens(PyParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(PyParser.IDENT, i);
		}
		public TerminalNode DOT() { return getToken(PyParser.DOT, 0); }
		public TerminalNode LPAREN() { return getToken(PyParser.LPAREN, 0); }
		public TerminalNode STRING() { return getToken(PyParser.STRING, 0); }
		public TerminalNode RPAREN() { return getToken(PyParser.RPAREN, 0); }
		public TerminalNode NEWLINE() { return getToken(PyParser.NEWLINE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(PyParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PyParser.COMMA, i);
		}
		public List<CallArgumentContext> callArgument() {
			return getRuleContexts(CallArgumentContext.class);
		}
		public CallArgumentContext callArgument(int i) {
			return getRuleContext(CallArgumentContext.class,i);
		}
		public RouteDecoratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_routeDecorator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).enterRouteDecorator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).exitRouteDecorator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyParserVisitor ) return ((PyParserVisitor<? extends T>)visitor).visitRouteDecorator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RouteDecoratorContext routeDecorator() throws RecognitionException {
		RouteDecoratorContext _localctx = new RouteDecoratorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_routeDecorator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(AT);
			setState(122);
			match(IDENT);
			setState(123);
			match(DOT);
			setState(124);
			match(IDENT);
			setState(125);
			match(LPAREN);
			setState(126);
			match(STRING);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(127);
				match(COMMA);
				setState(128);
				callArgument();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134);
			match(RPAREN);
			setState(135);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclarationContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(PyParser.DEF, 0); }
		public TerminalNode IDENT() { return getToken(PyParser.IDENT, 0); }
		public TerminalNode LPAREN() { return getToken(PyParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PyParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(PyParser.COLON, 0); }
		public TerminalNode NEWLINE() { return getToken(PyParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(PyParser.INDENT, 0); }
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public TerminalNode DEDENT() { return getToken(PyParser.DEDENT, 0); }
		public ParamListContext paramList() {
			return getRuleContext(ParamListContext.class,0);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PyParserListener ) ((PyParserListener)listener).exitFunctionDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PyParserVisitor ) return ((PyParserVisitor<? extends T>)visitor).visitFunctionDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(DEF);
			setState(138);
			match(IDENT);
			setState(139);
			match(LPAREN);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(140);
				paramList();
				}
			}

			setState(143);
			match(RPAREN);
			setState(144);
			match(COLON);
			setState(145);
			match(NEWLINE);
			setState(146);
			match(INDENT);
			setState(147);
			functionBody();
			setState(148);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
